Revert "fix(rgb++): the btc address in digest wrapped"
This reverts commit 9d4a213dac5c7e6da5483d86f4ff7b8714c3babe.

--- a/src/components/TransactionItem/TransactionRGBPPDigestModal/styles.module.scss
+++ b/src/components/TransactionItem/TransactionRGBPPDigestModal/styles.module.scss
@@ -86,11 +86,8 @@
   font-size: 16px;
   color: var(--primary-color);
   max-width: 100%;
+  word-wrap: break-word;
   font-family: jetbrains-mono, monospace;
-
-  @media screen and (max-width: $mobileBreakPoint) {
-    word-wrap: break-word;
-  }
 }
 
 .addressType {
